# shreg

./: .coverage  API.md  README.md  pyproject.toml
scripts/: generate_readme_plots.py
src/shreg/: __init__.py  __main__.py  contours_reg.py  geometry.py  logger.py  plotting.py  segments_reg.py
src/shreg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_contours_reg.py  test_geometry.py  test_main.py  test_metric_reg.py  test_plotting.py  test_segments_reg.py
