[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shreg"
version = "0.1.0"
description = "Shape Regularization - A Python implementation of CGAL Shape Regularization algorithms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nicholas Pilkington" },
]
keywords = [
    "shape-regularization",
    "geometry",
    "segments",
    "contours",
    "cgal",
    "optimization",
    "computer-vision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "osqp>=0.6.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nickponline/shreg"
Documentation = "https://github.com/nickponline/shreg#readme"
Repository = "https://github.com/nickponline/shreg"
Issues = "https://github.com/nickponline/shreg/issues"

[project.scripts]
shreg = "shreg.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shreg = ["*.xyzi", "*.polylines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
